<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/for_testing_fragment_capture_root"
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/capture_image_button"
            android:layout_width="94dp"
            android:layout_height="89dp"
            android:background="@drawable/ic_shutter"
            android:contentDescription="@string/capture_button_alt"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.512" />

        <Button
            android:id="@+id/button_move_to_detect_corners"
            android:layout_width="67dp"
            android:layout_height="62dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_next_step"
            app:layout_constraintBottom_toBottomOf="@+id/capture_image_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/capture_image_button"
            app:layout_constraintVertical_bias="0.526" />

        <TextView
            android:id="@+id/capture_processing_progress"
            android:layout_width="59dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:layout_marginBottom="2dp"
            android:background="@drawable/badge_circle"
            android:contentDescription="@string/switch_camera_button_alt"
            android:gravity="center"
            android:padding="@dimen/spacing_small"
            android:scaleType="fitCenter"
            android:textColor="@android:color/white"
            android:textColorHint="@color/icActive"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button_move_to_detect_corners"
            app:layout_constraintEnd_toEndOf="@+id/button_move_to_detect_corners"
            app:layout_constraintStart_toStartOf="@+id/button_move_to_detect_corners" />

        <ProgressBar
            android:id="@+id/progressBar_capture_scanning"
            style="?android:attr/progressBarStyle"
            android:layout_width="20dp"
            android:layout_height="28dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/capture_processing_progress"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_capture_last_eid_checked"
            android:layout_width="108dp"
            android:layout_height="48dp"
            android:text="Last exaiminee checked: "
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/capture_image_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/for_testing_fragment_capture_root"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout6"
            android:layout_width="0dp"
            android:layout_height="491dp"
            app:layout_constraintBottom_toTopOf="@+id/spinner_capture_version_num"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.camera.view.PreviewView
                android:id="@+id/preview_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.camera.view.PreviewView>
            <ProgressBar
                android:id="@+id/progressBar_capture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/editText_capture_examineeId"
            android:layout_width="179dp"
            android:layout_height="88dp"
            android:ems="10"
            android:hint="@string/capture_examinee_id"
            android:inputType="date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/spinner_capture_version_num"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinner_capture_version_num"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner
            android:id="@+id/spinner_capture_version_num"
            android:layout_width="133dp"
            android:layout_height="88dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/detect_corners_version_number_hint"

            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editText_capture_examineeId" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>