...
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="start_scan_exam">Quick and dirty scan exam</string>
    <string name="resolve">Resolve</string>
    <string name="retake">Retake</string>
    <string name="approve">Approve</string>
    <string name="resolve_answers">Resolve Answers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="answers_is_1">1</string>
...
