...
            app:layout_constraintStart_toEndOf="@+id/button_cd_retake"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.509" />


        <!--        <Button-->
        <!--            android:id="@+id/button_cd_nav_to_resolve_answers"-->
        <!--            android:layout_width="67dp"-->
        <!--            android:layout_height="62dp"-->
        <!--            android:layout_gravity="bottom"-->
        <!--            android:layout_marginEnd="8dp"-->
        <!--            android:background="@drawable/button_next_step"-->
        <!--            app:layout_constraintBottom_toBottomOf="@+id/button_cd_approve_and_scan_answers"-->
...
